fix:z-index-menu

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -12,7 +12,7 @@
   height: 96.5%;
   border-radius: 8px;
   overflow: hidden;
-  z-index: -1!important;
+  z-index: 900!important;
   overflow-y: scroll;
 
   .logo {
